--- a/index.html
+++ b/index.html
@@ -1097,7 +1097,7 @@
             <div class="footer-logo">Shivalay Infratech</div>
             <div class="footer-tagline">100% RERA Approved Projects</div>
             <div class="footer-credits">
-                Made by <a href="https://raweditt.com" target="_blank">Raweditt</a> × <a href="https://semicolon.online"
+                Made by <a href="https://raweditt.com" target="_blank">Raweditt</a> × <a href="https://thesemicolon.online"
                     target="_blank">Semicolon</a>
             </div>
         </footer>
@@ -1181,5 +1181,6 @@ END:VCARD`;
         });
     </script>
 </body>
+
 
 </html>
